# bonsai

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  DOLT_REMOTE.md  README.md  TODO.md  lefthook.yml  manifest  mise.toml  skills-lock.json
.beads/: config.yaml  metadata.json
.beads/hooks/: pre-commit  prepare-commit-msg
.claude/commands/opsx/: apply.md  archive.md  bulk-archive.md  continue.md  explore.md  ff.md  new.md  propose.md  sync.md
.claude/skills/openspec-apply-change/: SKILL.md
.claude/skills/openspec-archive-change/: SKILL.md
.claude/skills/openspec-bulk-archive-change/: SKILL.md
.claude/skills/openspec-continue-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/openspec-ff-change/: SKILL.md
.claude/skills/openspec-new-change/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.claude/skills/openspec-sync-specs/: SKILL.md
.github/: release.yml
.github/workflows/: ci.yml  release.yml
.mise/tasks/: release
openspec/changes/add-get-subcommand/: proposal.md  tasks.md
openspec/changes/add-info-command/: design.md  tasks.md
openspec/changes/add-structured-logging/: proposal.md  tasks.md
openspec/changes/cli-startup-performance/: design.md  tasks.md
openspec/changes/current-subcommand/: tasks.md
openspec/changes/lsof-w-flag/: tasks.md
scripts/: openspec-validate-staged.sh  view-proposal.sh
src/: lib.rs  logging.rs  main.rs
src/worktree/: mod.rs
tests/: e2e_example.rs  help_command.rs  info_command.rs  logging.rs  worktree_get.rs  worktree_list.rs  worktree_lock.rs
tests/common/: mod.rs
(+92 files in other folders)
