[package]
name = "bosai"
version = "0.1.0"
edition = "2024"

[lib]
name = "bonsai"
path = "src/lib.rs"

[[bin]]
name = "bs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
owo-colors = "4"
rand = "0.8"

[dev-dependencies]
testcontainers = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
