[package]
name = "bonsai"
version = "0.1.0"
edition = "2024"

[lib]
name = "bonsai"
path = "src/lib.rs"

[[bin]]
name = "bs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "5"
owo-colors = "4"
rand = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
testcontainers = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
